# text2morse-service

./: .example.env  Cargo.toml  Dockerfile  LICENSE.md  README.md
assets/scripts/: callback.js  dropdown.js  logout.js  morse.min.js  profile.js
assets/styles/: dropdown.css  index.css  legal.css  logout.css  main.css  profile.css
src/: main.rs  templates.rs
src/api/: oauth.rs
src/data/: config.rs
src/routes/: auth.rs  index.rs  legal.rs  mod.rs  profile.rs
src/utils/: session.rs
templates/: callback.html  error.html  index.html  legal.html  logout.html  profile.html
templates/components/: footer.html  header.html  meta.html  nojs.html
templates/content/: privacy.html  terms.html
